refactored categories flow + swagger
